ubiquity (1.9.10) UNRELEASED; urgency=low

  [ Harald Sitter ]
  * Ensure that the KDE frontend is using Oxygen icons

  [ Mario Limonciello ]
  * Update debconf strings for summary template page on mythbuntu 
    frontend.

  [ Colin Watson ]
  * GTK frontend:
    - Fix widget/method name clash that broke the Quit button (LP: #257962).
    - Hide auto-login option in OEM mode, since it will be offered later in
      a less confusing context (LP: #257606).

 -- Mario Limonciello <superm1@ubuntu.com>  Thu, 14 Aug 2008 23:02:42 -0500

ubiquity (1.9.9) intrepid; urgency=low

  * Explicitly remove etc/fstab from the list of files to be copied over.
    It is created from partman prior to file copy, so the recent commit 
    to unlink files if they exist already is remvoing it. (LP: #257580)

 -- Mario Limonciello <superm1@ubuntu.com>  Wed, 13 Aug 2008 14:30:41 -0500

ubiquity (1.9.8) intrepid; urgency=low

  [ Mario Limonciello ]
  * Remove xmltv and dvbutils options, as they will be installed across
    all boxen now.
  * debian/control:
    - Drop depends for guidance on mythbuntu package.
  * Install custom mythbuntu recipe - only applicable for Mythbuntu
    frontend.
  * Add support for additional mythbuntu plugin, apple trailers.

  [ Colin Watson ]
  * When copying files, remove regular files and symlinks if they exist
    already on the target; this can happen legitimately if installing over
    an existing system and /boot wasn't erased.
  * Make the Back button insensitive on the first page rather than hiding it
    (LP: #186953).
  * Rename main Cancel button to Quit, and adjust the quit dialog text
    slightly so that we consistently use "quit" as the action verb and
    "cancel" clearly means to cancel the dialog (LP: #45690).
  * Fix format string substitution error in _abstract method.
  * Allow skipping the unmounting of busy partitions by preseeding
    ubiquity/partman-skip-unmount to true (LP: #252667).